--- a/DiseñoWeb.html
+++ b/DiseñoWeb.html
@@ -21,7 +21,7 @@
           <div class="container ">
               <img src="./Logo.png" alt="" width="120px">
               
-              <img src="./Fonto de Menu.png" alt="" width="50px" class="navbar-toggler"  data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
+              <img src="./Fonto de Menu1.png" alt="" width="50px" class="navbar-toggler"  data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
                 
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                   <div class="offcanvas-header">
@@ -127,16 +127,16 @@
                                                 <div class="row">
                                                     <div class="col">
                                                         <div class="modal-body">
-                                                            <p id="text"> Contact US: modulo para preguntas y respuestas al cliente a traves de emails.</p>
-                                                            <p id="text"> Internationalization: seleccion de lenguaje</p>
-                                                            <p id="text"> Google Maps Integration</p>
-                                                            <p id="text"> Posicionamiento SEO</p>
-                                                            <p id="text"> Help - Chatbot: modulo de ayuda al usuario a traves de un chat (Solo Configuración/No incluye costos de
+                                                            <p id="text"> • Contact US: modulo para preguntas y respuestas al cliente a traves de emails.</p>
+                                                            <p id="text"> • Internationalization: seleccion de lenguaje</p>
+                                                            <p id="text"> • Google Maps Integration</p>
+                                                            <p id="text"> • Posicionamiento SEO</p>
+                                                            <p id="text"> • Help - Chatbot: modulo de ayuda al usuario a traves de un chat (Solo Configuración/No incluye costos de
                                                                 Pluging)</p>
-                                                            <p id="text"> Páginas ilimitadas. Todo lo que necesitas. ( Hasta ser aprobada la versión final ).</p>
-                                                            <p id="text"> Configuracion de Blog</p>
-                                                            <p id="text"> Soporte del sitio web</p>
-                                                            <p id="text"> NO INCLUYE HOSTING Y DOMINIO</p>
+                                                            <p id="text"> • Páginas ilimitadas. Todo lo que necesitas. ( Hasta ser aprobada la versión final ).</p>
+                                                            <p id="text"> • Configuracion de Blog</p>
+                                                            <p id="text"> • Soporte del sitio web</p>
+                                                            <p id="text"> • NO INCLUYE HOSTING Y DOMINIO</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -189,14 +189,14 @@
                                                 <div class="row">
                                                     <div class="col">
                                                         <div class="modal-body">
-                                                             <p id="text"> Diseño gráfico del Sitio web (Hasta ser aprobada la version final ).</p>
-                                                             <p id="text"> Sitio web 100% personalizado.</p>
-                                                             <p id="text"> Diseñado por profesionales.</p>
-                                                             <p id="text"> Mobile Response: tu website se puede acceder desde cualquier dispositivo móvil.</p>
-                                                             <p id="text"> Business Email address</p>
-                                                             <p id="text">Páginas ilimitadas. Todo lo que necesitas. ( Hasta ser aprobada la versión final ).</p>
-                                                             <p id="text"> Estadísticas</p>
-                                                             <p id="text"> NO INCLUYE HOSTING Y DOMINIO</p>
+                                                             <p id="text"> • Diseño gráfico del Sitio web (Hasta ser aprobada la version final ).</p>
+                                                             <p id="text"> • Sitio web 100% personalizado.</p>
+                                                             <p id="text"> • Diseñado por profesionales.</p>
+                                                             <p id="text"> • Mobile Response: tu website se puede acceder desde cualquier dispositivo móvil.</p>
+                                                             <p id="text"> • Business Email address</p>
+                                                             <p id="text"> • Páginas ilimitadas. Todo lo que necesitas. ( Hasta ser aprobada la versión final ).</p>
+                                                             <p id="text"> • Estadísticas</p>
+                                                             <p id="text"> • NO INCLUYE HOSTING Y DOMINIO</p>
                                                     </div>
                                                 </div>
                                                 <div class="row">
@@ -248,18 +248,18 @@
                                                 <div class="row">
                                                     <div class="col">
                                                         <div class="modal-body">
-                                                             <p id="text"> Email Marketing</p>
-                                                             <p id="text"> Google Maps Integration</p>
-                                                             <p id="text"> Posicionamiento SEO</p>
-                                                             <p id="text"> Help - Chatbot: modulo de ayuda al usuario a traves
+                                                             <p id="text"> • Email Marketing</p>
+                                                             <p id="text"> • Google Maps Integration</p>
+                                                             <p id="text"> • Posicionamiento SEO</p>
+                                                             <p id="text"> • Help - Chatbot: modulo de ayuda al usuario a traves
                                                                 de un chat (Solo Configuración/No incluye costos de Pluging)</p>
-                                                             <p id="text"> Website Analytics: herramienta de analisis para el
+                                                             <p id="text"> • Website Analytics: herramienta de analisis para el
                                                                 seguimiento y reportes del trafico de website</p>
-                                                             <p id="text"> Configuracion de Blog</p>
-                                                             <p id="text"> Soporte del sitio web</p>
-                                                             <p id="text"> Catalogo Online con una cantidad máxima de 20 productos</p>
-                                                             <p id="text"> Procesador de pagos en paypal o cuentas bancarias.</p>
-                                                             <p id="text"> NO INCLUYE HOSTING Y DOMINIO</p>
+                                                             <p id="text"> • Configuracion de Blog</p>
+                                                             <p id="text"> • Soporte del sitio web</p>
+                                                             <p id="text"> • Catalogo Online con una cantidad máxima de 20 productos</p>
+                                                             <p id="text"> • Procesador de pagos en paypal o cuentas bancarias.</p>
+                                                             <p id="text"> • NO INCLUYE HOSTING Y DOMINIO</p>
                                                         </div>
                                                 </div>
                                                 <div class="row">
@@ -321,14 +321,14 @@
                                                 <div class="row">
                                                     <div class="col">
                                                         <div class="modal-body">
-                                                             <p id="text"> Diseño gráfico del Sitio web (Hasta ser aprobada la version final ).</p>
-                                                             <p id="text"> Sitio web 100% personalizado.</p>
-                                                             <p id="text"> Diseñado por profesionales.</p>
-                                                             <p id="text"> Mobile Response: tu website se puede acceder desde cualquier dispositivo móvil.</p>
-                                                             <p id="text"> Business Email address</p>
-                                                             <p id="text"> Páginas ilimitadas. Todo lo que necesitas. ( Hasta ser aprobada la versión final ).</p>
-                                                             <p id="text"> Estadísticas</p>
-                                                             <p id="text"> NO INCLUYE HOSTING Y DOMINIO</p>
+                                                             <p id="text"> • Diseño gráfico del Sitio web (Hasta ser aprobada la version final ).</p>
+                                                             <p id="text"> • Sitio web 100% personalizado.</p>
+                                                             <p id="text"> • Diseñado por profesionales.</p>
+                                                             <p id="text"> • Mobile Response: tu website se puede acceder desde cualquier dispositivo móvil.</p>
+                                                             <p id="text"> • Business Email address</p>
+                                                             <p id="text"> • Páginas ilimitadas. Todo lo que necesitas. ( Hasta ser aprobada la versión final ).</p>
+                                                             <p id="text"> • Estadísticas</p>
+                                                             <p id="text"> • NO INCLUYE HOSTING Y DOMINIO</p>
                                                     </div>
                                                 </div>
                                                 <div class="row">
@@ -380,16 +380,16 @@
                                                 <div class="row">
                                                     <div class="col">
                                                         <div class="modal-body">
-                                                            <p id="text"> Diseño de vistas de productos hasta máximo 100 items</p>
-                                                            <p id="text"> Procesadores de pago</p>
-                                                            <p id="text"> Email subscription: modulo de captura de email de los clientes para poder enviarles actualizaciones de
+                                                            <p id="text"> • Diseño de vistas de productos hasta máximo 100 items</p>
+                                                            <p id="text"> • Procesadores de pago</p>
+                                                            <p id="text"> • Email subscription: modulo de captura de email de los clientes para poder enviarles actualizaciones de
                                                                 nuevos productos, ofertas, eventos.</p>
-                                                            <p id="text"> Mobile Response: tu website se puede acceder desde cualquier dispositivo móvil.</p>
-                                                            <p id="text"> Modulo de Almacen e Inventario.</p>
-                                                            <p id="text"> CMS (Content management system): Sistema de manejo de contenido digital que permite actualizar o
+                                                            <p id="text"> • Mobile Response: tu website se puede acceder desde cualquier dispositivo móvil.</p>
+                                                            <p id="text"> • Modulo de Almacen e Inventario.</p>
+                                                            <p id="text"> • CMS (Content management system): Sistema de manejo de contenido digital que permite actualizar o
                                                                 modificar cualquier imagen digital, textos, etc. Esta herramienta es para que el dueno de la pagina pueda
                                                                 hacerlo sin tener que depender del Desarrollador.</p>
-                                                            <p id="text"> NO INCLUYE HOSTING Y DOMINIO</p>
+                                                            <p id="text"> • NO INCLUYE HOSTING Y DOMINIO</p>
                                                         </div>
                                                 </div>
                                                 <div class="row">
@@ -441,15 +441,15 @@
                                                 <div class="row">
                                                     <div class="col">
                                                         <div class="modal-body">
-                                                            <p id="text"> Contact US: modulo para preguntas y respuestas al cliente a traves de emails. </p>
-                                                            <p id="text"> Internationalization: seleccion de lenguaje</p>
-                                                            <p id="text"> Google Maps Integration:</p>
-                                                            <p id="text"> Posicionamiento SEO</p>
-                                                            <p id="text"> Help - Chatbot: modulo de ayuda al usuario a traves de un chat (Solo Configuración/No incluye costos de Pluging)</p>
-                                                            <p id="text"> Website Analytics: herramienta de analisis para el seguimiento y reportes del trafico de website</p>
-                                                            <p id="text"> Configuracion de Blog</p>
-                                                            <p id="text"> Soporte del sitio web</p>
-                                                            <p id="text"> NO INCLUYE HOSTING Y DOMINIO</p>
+                                                            <p id="text"> • Contact US: modulo para preguntas y respuestas al cliente a traves de emails. </p>
+                                                            <p id="text"> • Internationalization: seleccion de lenguaje</p>
+                                                            <p id="text"> • Google Maps Integration:</p>
+                                                            <p id="text"> • Posicionamiento SEO</p>
+                                                            <p id="text"> • Help - Chatbot: modulo de ayuda al usuario a traves de un chat (Solo Configuración/No incluye costos de Pluging)</p>
+                                                            <p id="text"> • Website Analytics: herramienta de analisis para el seguimiento y reportes del trafico de website</p>
+                                                            <p id="text"> • Configuracion de Blog</p>
+                                                            <p id="text"> • Soporte del sitio web</p>
+                                                            <p id="text"> • NO INCLUYE HOSTING Y DOMINIO</p>
                                                    </div>
                                                 </div>
                                                 <div class="row">
